更新 IAM 安装教程至 v0.13，替换截图